[gd_scene load_steps=2 format=3 uid="uid://bvsjo2ynos7kp"]

[ext_resource type="Script" uid="uid://dsyyyv4m7uchr" path="res://death_zone/death_zone_hurtbox.gd" id="1_3kbxh"]

[node name="DeathZoneHurtbox" type="Area2D"]
script = ExtResource("1_3kbxh")

[node name="CoyoteTimeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="CoyoteTimeTimer" to="." method="_on_coyote_time_timer_timeout"]
